--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Chess Game vs Computer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Symbols:wght@400&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI Symbol', 'Noto Sans Symbols', 'DejaVu Sans', Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
